--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
+  /* text-align: center; */
 }
 
 .logo {
@@ -33,19 +33,8 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
 .read-the-docs {
   color: #888;
-}
-
-.card-grid {
-  display: grid;
-  align-items: center;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 1rem;
 }
 
 .card {
@@ -53,14 +42,17 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  padding: 2em;
   border-radius: 0.25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
   background-color: white;
   transform-style: preserve-3d;
-  height: 250px;
+  /* max-width: 75%; */
+  height: 300px;
   cursor: pointer;
   transition: 150ms;
   transform: perspective(1000px) rotateY(var(--rotate-y, 0));
+  /* overflow: hidden; */
 }
 
 .card:hover {
@@ -71,11 +63,30 @@
   --rotate-y: 180deg;
 }
 
-.card .front,
+.card .front {
+  position: absolute;
+  padding: 1rem;
+  backface-visibility: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+  font-size: 12px;
+}
+
 .card .back {
   position: absolute;
   padding: 1rem;
   backface-visibility: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  /* font-size: 12px; */
 }
 
 .card .back {
