--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,11 +69,11 @@
   backface-visibility: hidden;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
   overflow: hidden;
-  font-size: 12px;
+  /* font-size: 12px; */
 }
 
 .card .back {
@@ -94,7 +94,7 @@
 }
 
 .flashcard-options {
-  margin-top: 0.5rem;
+  margin-top: 2.5rem;
 }
 
 .flashcard-option {
