--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,8 +47,8 @@
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
   background-color: white;
   transform-style: preserve-3d;
-  /* max-width: 75%; */
-  height: 300px;
+  max-width: 90%;
+  height: 330px;
   cursor: pointer;
   transition: 150ms;
   transform: perspective(1000px) rotateY(var(--rotate-y, 0));
